<resources>
    <string name="app_name">Projeto_IagoRodrigues_DMOS5</string>
    <string name="buscar">Encontrar UF</string>
    <string name="textview_estado">textview estado</string>
    <string name="textview_casos">textview casos</string>
    <string name="casos_confirmados">Casos Confirmados</string>
    <string name="textview_mortes">textview mortes</string>
    <string name="mortes_confirmadas">Mortes Confirmadas</string>
    <string name="textview_suspeitos">textview suspeitos</string>
    <string name="casos_suspeitos">Casos Suspeitos</string>
    <string name="textview_negativos">textview negativos</string>
    <string name="testes_negativos">Testes Negativos</string>
    <string name="acompanhar">Acompanhar</string>
    <string name="inf">Esse aplicativo foi criado com o intuito de facilitar o acompanhamento aos casos de COVID-19 nos estados Brasileiros. Selecione um estado na lista para ter acesso às estatísticas</string>
    <string name="explicacao_permissao">A busca do estado depende do acesso a internet, sem essa permissão o aplicativo não consegue recuperar a informação desejada.</string>
    <string name="botao_fornecer">Fornecer</string>
    <string name="botao_nao_fornecer">Agora não</string>
    <string name="follow">Seguir Situação</string>
    <string name="erro_api">Opa! Erro de api!</string>
</resources>